fix overflow on homepage

--- a/src/assets/css/classes.scss
+++ b/src/assets/css/classes.scss
@@ -34,6 +34,7 @@
         justify-content: flex-start;
         margin: 0 20px;
         overflow-x: auto;
+        overflow-y: hidden;
 
         app-box-setting {
             flex-grow: 0;
